--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-microinvoice",
-  "version": "1.0.0",
+  "name": "microinvoice",
+  "version": "1.0.1",
   "description": "Fast & elegant PDF invoice generator for Node using PDFKit. No Puppeteer",
   "homepage": "https://github.com/baptistejamin/node-microinvoice",
   "main": "lib/index.js",
@@ -32,6 +32,7 @@
     "pdfkit"
   ],
   "dependencies": {
+    "get-stream": "6.0.1",
     "lodash.merge": "4.6.2",
     "pdfkit": "0.12.3"
   },
