--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "microinvoice",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Fast & elegant PDF invoice generator for Node using PDFKit. No Puppeteer",
   "homepage": "https://github.com/baptistejamin/node-microinvoice",
   "main": "lib/index.js",
@@ -34,7 +34,8 @@
   "dependencies": {
     "get-stream": "6.0.1",
     "lodash.merge": "4.6.2",
-    "pdfkit": "0.12.3"
+    "pdfkit": "0.12.3",
+    "transliteration": "2.2.0"
   },
   "devDependencies": {
     "check-build": "2.8.2"
