--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "microinvoice",
-  "version": "1.0.6",
+  "name": "@twosdai/microinvoice",
+  "version": "2.0.0",
   "description": "Fast & elegant PDF invoice generator for Node using PDFKit. No Puppeteer. Based on node-microinvoice by @baptistejamin.",
   "homepage": "https://github.com/twosdai/node-microinvoice",
   "main": "lib/index.js",
